# Haskell-Programming-From-First-Principles-exercises

02.BasicExpressionsAndFunctions/: WhereFromLet2.hs
03.Strings/: 03.Print1.hs
04.BasicDatatypes/: 09.a.Ex10.fFstSnd.hs
05.Types/: 08.FixIt2.hs  08.TypeKwonDo.hs
06.Typeclasses/: 05.DayOfWeek.hs  05.DayOfWeek_PartialFunction.hs  14.Ex2.DoesItTypecheck2.hs  14.Ex3.GivenDatatypeDeclaration4.hs  14.Ex3.GivenDatatypeDeclarationCommon.hs  14.Ex4.MatchTheTypes2.hs  14.Ex4.MatchTheTypes3.hs  14.Ex4.MatchTheTypes9.hs  14.Ex5.TypeKwonDoTwoElectricTypealoo1.hs
07.MoreFunctionalPatterns/: 04.PatternMatchingAgainstDataConstr_registeredUser1.hs  05.ExCasePractice3.hs  07.DogYrs.hs  11.Let'sWriteCode1PointFree.hs  11.Let'sWriteCode2b.hs  11.Let'sWriteCode3.hs
08.Recursion/: 05.DividedBy.hs  06.ReviewOfTypes2.hs
09.Lists/: 05.ExerciseEnumFromTo.hs  06.ThyFearfulSymmetry2.hs  07.ExercisesComprehendThyLists.hs  07.ExercisesSquareCube2.hs  10.ExercisesFiltering1.hs  10.ExercisesFiltering2.hs  10.ExercisesFiltering3.hs  12.Chiphers.hs  12.Data.Char2.hs  12.WritingStandardFunctions10.hs  12.WritingStandardFunctions2.hs  12.WritingStandardFunctions3a.hs  12.WritingStandardFunctions5.hs  12.WritingStandardFunctions8.hs  12.WritingStandardFunctions9.hs
10.02.ExSomeInstances01MaybeT/: derivation.nix  main.cabal
10.02.ExSomeInstances01MaybeT/src/: Main.lhs
10.Folds/: 05.ExercisesUnderstandingFolds5.hs  06.ExercisesDatabaseProcessing3.hs  06.ExercisesDatabaseProcessing5.hs  09.ScansEx3Factorial!.hs  10.RewritingFunctionsUsingFolds2.hs  10.RewritingFunctionsUsingFolds3AnyPointFree.hs  10.RewritingFunctionsUsingFolds3Folding.hs  10.RewritingFunctionsUsingFolds5.hs  10.RewritingFunctionsUsingFolds6.hs  10.RewritingFunctionsUsingFolds7.hs  10.RewritingFunctionsUsingFolds8.hs
11.AlgebraicDatatypes/: 05.ExDogTypes7-9.hs  06.ExVehicles3a.hs  06.ExVehicles5.hs  09.ExLogicGoats3.hs  12.ExHowDoesYourGardenGrow2NF.hs  14.ExTheQuad1.hs  14.ExTheQuad4.hs  14.ExTheQuad5.hs  14.ExTheQuad6.hs  17.InsertingIntoTree.hs  17.WriteFoldrForBinaryTree.hs  18.As-pasttern1.hs  18.As-pasttern2.hs  18.LanguageEx1.hs  18.LanguageEx2.hs  18.PhoneExercise1.hs  18.PhoneExercise2.hs  18.PhoneExercise3.hs  18.PhoneExercise4.hs  18.PhoneExercise5.hs
12.SignalingAdversity/: 03.BleatingEither2.hs  05.ChapExNatural.hs
13.BuildingProjects/: 02.foreverExitSuccessfully.hs  03.ForeverExitSuccessfully.hs
13.BuildingProjects/03-08.Hello/: Hello.cabal
13.BuildingProjects/09-13.Hangman/: Hangman.cabal
13.BuildingProjects/hangman/: hangman.cabal
13.BuildingProjects/hangman/src/: Main.hs
13.BuildingProjects/hello/: hello.cabal
14.Testing/03.Addition/: derivation.nix  main.cabal
14.Testing/03.Addition/src/: Addition.lhs
14.Testing/03.ShortExMultiplication/: derivation.nix  main.cabal
14.Testing/04.AdditionEnterQuickCheck/: default.nix  derivation.nix  main.cabal
14.Testing/05.MorseCode/: CHANGELOG.md  derivation.nix  main.cabal
14.Testing/05.MorseCode/old_files/: default.nix  shell.nix
14.Testing/05.MorseCode/src/: Main.lhs  Morse.lhs
14.Testing/05.MorseCode/tests/: tests.lhs
14.Testing/06.ArbitraryProducts/: derivation.nix  main.cabal
14.Testing/06.BabysFirstArbitrary/: derivation.nix  main.cabal  stack.yaml
14.Testing/06.CoArbitrary/: derivation.nix  main.cabal
14.Testing/06.CoArbitrary/src/: CoArbitrary.lhs
14.Testing/06.GreaterThanTheSumOfItsParts/: derivation.nix  main.cabal
14.Testing/06.a.IdentityCrisis/: derivation.nix
14.Testing/06.b.IdentityCrisis/: main.cabal
14.Testing/07.ExFailure/: derivation.nix  main.cabal
14.Testing/07.ExIdempotence01/: derivation.nix  main.cabal
14.Testing/07.ExIdempotence02/: derivation.nix  main.cabal
14.Testing/07.ExMakeGenDatatype01/: derivation.nix  main.cabal
14.Testing/07.ExMakeGenDatatype02/: derivation.nix  main.cabal
14.Testing/07.ExValidatingNumbersIntoWords/: derivation.nix  main.cabal  result
14.Testing/07.HangmanTesting/: Hangman.cabal  derivation.nix
14.Testing/07.UsingQuickCheck01/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck02/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck03/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck04/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck05/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck06/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck07/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck08/: main.cabal
14.Testing/07.UsingQuickCheck09/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck10/: derivation.nix  main.cabal
14.Testing/07.UsingQuickCheck11/: derivation.nix  main.cabal
15. Monoid, Semigroup/: 1.exOptionalMonoid.hs
15.MonoidAndSemigroup/: 1.exOptionalMonoid.hs
15.MonoidAndSemigroup/10.ExOptionalMonoid/: derivation.nix  main.cabal  main.nix
15.MonoidAndSemigroup/11.ExMadness/: derivation.nix  main.cabal  (+1 more)
15.MonoidAndSemigroup/15.ExSemigroup2/: main.cabal  main.nix
15.MonoidAndSemigroup/15.ExSemigroup6/: main.cabal  main.nix
16.Functor/17.ChapEx01/: derivation.nix  main.cabal
16.Functor/17.ChapEx01/src/: Main.lhs
CHAPTER 2. BASIC EXPRESSIONS AND FUNCTIONS/: 2.11.EquivalentExpressions.hs  2.11.Parentezation.hs  FunctionWithLet.hs  FunctionWithWhere.hs  WhereFromLet.hs
CHAPTER 3. STRINGS/: 3.3.Print2.hs  3.4.Area.hs  3.4.TopOrLocal.hs  3.6.print3broken.hs  3.6.print3flipped.hs  3.8.ChapterEx_1.hs  3.8.ChapterEx_2.hs  3.8.ChapterEx_rvrsModule.hs  3.8.ChapterEx_thirdLetter.hs
CHAPTER 4. BASIC DATATYPES/: 4.3.MoodSwing.hs  4.6.greetIfCool1.hs  4.9.a.Ex9.myAbs.hs  4.9.b.Ex1.hs
CHAPTER 5. TYPES/: 5.5.ExParametricity-3.hs  5.8.DetermineType.hs  5.8.DoesItCompile-No.hs  5.8.GivenATypeWriteAFunction.hs  5.8.WriteATypeSignature.hs
CHAPTER 6. TYPECLASSES/: 6.5.DayOfWeek.hs  6.5.Trivial.hs
Chapters/13.BuildingProjects/hello/: Dockerfile  hello.cabal
Chapters/13.BuildingProjects/hello/src/: DogsRule.hs  Hello.hs
Chapters/14.Testing/3.ShortEx-Recursion/: ShortExRecursion.cabal
projectTemplate/: main.cabal  main.nix  stack.yaml
projectTemplate/src/: Main.hs  Main.lhs
(+589 files in other folders)
