name:                hangman
version:             0.1.0.3
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            blog.latukha.com
license:             BSD3
license-file:        LICENSE
author:              Anton Latukha
maintainer:          anton@latukha.com
copyright:           2018, Anton Latukha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split