name:                  ExSemigroup6
version:               0.0.0.1
synopsis:              Synopsis text
description:           Description text
homepage:              http://haskellbook.com/
license:               BSD3
license-file:          LICENSE
author:                Chris Allen, Julie Moronuki, Anton Latukha
maintainer:            anton@latukha.com
copyright:             Anton Latukha: 2018; Chris Allen: 2016-2018; Julie Moronuki: 2016-2018
category:              Training
build-type:            Simple
cabal-version:         >=2.2

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.11 && < 5
  other-modules:       otherModuleNames

library
  hs-source-dirs:      src
  exposed-modules:     otherModuleNames
  default-language:    Haskell2010
  build-depends:       base >= 4.11 && < 5
