name:                hello
version:             0.1.0.2
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            blog.latukha.com
license:             BSD3
license-file:        LICENSE
author:              Anton Latukha
maintainer:          anton@latukha.com
copyright:           2018, Anton Latukha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library hello
  hs-source-dirs:      src
  exposed-modules:     Hello
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5