-- something something
name: ShortExRecursion
version: 0.1.0.0
license-file: LICENSE
author: Anton Latuha
maintainer: dummy@email.com
category: Text
build-type: Simple
cabal-version: >=1.10

executable shortExRecursion        
  hs-source-dirs: src
  main-is: ShortExRecursion.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
               , hspec

--  ghc-options: -Wall -fwarn-tabs